logout on button, click outside of modal to close, fixed css for light/dark mode button

--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,7 @@ header {
 .dark .modal {
   @apply bg-gray-300 text-black;
 }
+
+.dark .moveButton {
+  @apply translate-x-5;
+}
